--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^0.13.6
+  shared_preferences: ^2.2.2
   google_maps_flutter: ^2.6.0
   flutter_localizations:
     sdk: flutter
