--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,6 +38,8 @@ flutter {
 }
 
 dependencies {
+    implementation 'androidx.core:core-ktx:1.16.0'
+    implementation 'androidx.core:core:1.16.0'
     implementation platform('com.google.firebase:firebase-bom:32.2.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.firebase:firebase-auth'
