--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,15 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.6
-  geolocator: ^10.0.0
-  permission_handler: ^11.3.0
-  flutter_svg: ^2.0.0
+  http: ^1.4.0
+  geolocator: ^14.0.2
+  permission_handler: ^12.0.1
+  flutter_svg: ^2.2.0
   shared_preferences: ^2.2.2
   google_maps_flutter: ^2.6.0
   google_map_custom_windows: ^1.0.1
-  cached_network_image: ^3.2.3
+  cached_network_image: ^3.4.1
   url_launcher: ^6.2.6
+  image_picker: ^1.1.2
+  file_picker: ^10.2.1
+  path_provider: ^2.1.1
   flutter_localizations:
     sdk: flutter
 
@@ -50,13 +53,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^4.0.0
+  flutter_lints: ^6.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
