--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^1.1.2
   file_picker: ^10.2.1
   path_provider: ^2.1.1
+  geocoding: ^2.0.1
   flutter_localizations:
     sdk: flutter
   provider: ^6.0.0 # <-- Añade esta línea para el soporte de provider
