--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,11 @@ dependencies:
   file_picker: ^10.2.1
   path_provider: ^2.1.1
   geocoding: ^2.0.1
+
   flutter_localizations:
     sdk: flutter
-  provider: ^6.0.0 # <-- Añade esta línea para el soporte de provider
+  provider: ^6.0.0
+  web_socket_channel: ^2.4.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
