--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   file_picker: ^10.2.1
   path_provider: ^2.1.1
   geocoding: ^2.0.1
+  font_awesome_flutter: ^10.7.0
   
   flutter_localizations:
     sdk: flutter
