--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,8 @@ dependencies:
   path_provider: ^2.1.1
   geocoding: ^2.0.1
   font_awesome_flutter: ^10.7.0
-  
+  pusher_channels_flutter: ^2.2.1
+
   flutter_localizations:
     sdk: flutter
   provider: ^6.0.0
