--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   geocoding: ^2.0.1
   font_awesome_flutter: ^10.7.0
   pusher_channels_flutter: ^2.2.1
+  image: ^4.1.0
+
 
   flutter_localizations:
     sdk: flutter
