--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,11 +63,21 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^6.0.0
+  flutter_native_splash: ^2.3.10
 
 flutter_icons:
   android: true
   ios: true
   image_path: "assets/icons/iconofoodmaps.png"
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/icons/iconFoodMaps.png
+  android: true
+  ios: true
+  web: false
+  android_gravity: center
+  ios_content_mode: scaleAspectFit
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
